<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/expression"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/expression"
        android:background="@drawable/rounded_corner"
        android:gravity="bottom|center_horizontal|right"
        android:padding="15dp"
        android:textSize="30sp"
        android:layout_margin="5dp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textColor="@color/primary"

            />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:layout_marginEnd="8dp"
            android:onClick="onOperator"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@color/primary"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:layout_marginEnd="8dp"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@color/primary"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary1"
            android:onClick="onOperator"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/substract"
            android:layout_marginEnd="8dp"
            android:onClick="onOperator"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@color/primary"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:layout_marginEnd="8dp"
            android:onClick="onDigit"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:layout_marginEnd="8dp"
            android:onClick="onDecimalPoint"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:layout_marginEnd="8dp"
            android:onClick="onClear"
            android:textSize="18sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_marginEnd="8dp"
            android:onClick="onOperator"
            android:textSize="25sp"
            android:textStyle="italic|bold"
            app:backgroundTint="@color/primary"
            android:background="@drawable/rounded_btn"
            android:textColor="@color/primary1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="5dp"
        android:layout_margin="20dp"
        >
        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary2"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="italic|bold" />
    </LinearLayout>


</LinearLayout>